--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:iIq6WW72bJIL/XmGOcz4RYXPcmHlcoT4Tm4EPRPPelQ=
+APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://127.0.0.1:8000
