--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,10 @@
 /.idea
 /.vagrant
 /.vscode
+composer.lock
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
+.phpunit.result.cache
