--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,10 @@
 /public/storage
 /storage/*.key
 /vendor
-/.idea
-/.vagrant
-/.vscode
 composer.lock
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
-.phpunit.result.cache
+.styleci.yml
