--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "barryvdh/laravel-cors": "^0.11.4",
         "barryvdh/laravel-debugbar": "^3.2.8",
         "doctrine/dbal": "^2.6",
-        "tymon/jwt-auth": "^0.5.12"
+        "tymon/jwt-auth": "^1.0.0-rc.5"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
