--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,9 @@
 /public/storage
 /storage/*.key
 /vendor
-.env
-.env.backup
-.phpunit.result.cache
-.styleci.yml
-composer.lock
+/.idea
+/.vagrant
 Homestead.json
 Homestead.yaml
 npm-debug.log
-yarn-error.log
+.env
